--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,177 +1,107 @@
 <section class="portfolio">
+  <div id="wrapper">
 
-<div class="container-fluid port">
-      <div class="row row-offcanvas row-offcanvas-left">
-
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-          <div class="list-group">
-            <a href="#" class="list-group-item active">Portfolio</a>
-            <a href="#" class="list-group-item">Profil</a>
-            <a href="#" class="list-group-item">Edit Account</a>
-            <a href="#" class="list-group-item">Logout</a>
-            <!-- <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a> -->
-          </div>
-        </div><!--/span-->
-        <div class="col-xs-12 col-sm-9 content">
-          <p class="pull-left">
-            <button type="button" class="hamburger btn-xs" data-toggle="offcanvas">&#9776;</button>
-            <!-- <button class="hamburger">&#9776;</button> -->
-             <!-- <button class="cross btn-xs">&#735;</button> -->
-             <button type="button" class="cross btn-xs" data-toggle="offcanvas">&#735;</button>
-          </p>
-  
-  <div class="text-center">
-    <h3 class="baltxt">Currrent Balance</h3>
-
-    <div class="row">
-    <div class="droplistmain">
-      <div class="col-md-3">
-    <div class="droplist">
-        <label>
-            <select>
-              <option value="0">Show 0 balances</option>
-              <option value="1">BTC</option>
-              <option value="2">ETH</option>
-              <option value="3">XRP</option>
-              <option value="4">Cloak</option>
-              <option value="5">Dent</option>
-              <option value="6">KMD</option>
-              <option value="7">ETC</option>
-              <option value="8">NPXS</option>
-              <option value="9">USDT</option>
-              <option value="10">EOSD</option>
-              <option value="11">QKC</option>
-              <option value="12">XVG</option>
-            </select>
-        </label>
-      </div>
-      </div>
-      <div class="col-md-3">
-      <div class="secdrop">
-          <label>
-              <select>
-                <option value="0">Value</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                
-              </select>
-          </label>
-        </div>
-        </div>
-       
-        <div class="col-md-3">
-        <div class="thirddrop">
-            <label>
-                <select>
-                  <option value="0">Select Trend</option>
-                  <option value="1">2.2%</option>
-                  <option value="2">2.23%</option>
-                  <option value="3">3.2%</option>
-                  <option value="4">4.2%</option>
-                  <option value="5">24.2%</option>
-                  <option value="6">32.7%</option>
-                  <option value="7">45.2%</option>
-                  <option value="8">58.34%</option>
-                  
-                </select>
-            </label>
-          </div>
-          </div>
-          <div class="col-md-3 search">
-          <input type="text" placeholder="Search.." class="new">
-          
-            <i class="fa fa-search" style="cursor: auto;"></i>
-         
-          </div>
-          </div>
-          </div>
-      <!-- search table-->
-     
-        <div class="buylist">
-        <div class="row">
-          <div class="col-md-7 cryptotable">
-              <table class="table striped">
-                  <thead>
-                    <tr>
-                        <th>Currency</th>
-                        <th>Amount</th>
-                        <th>Value</th>
-                        <th>Price</th>
-                        <th>Trend</th>
-                    </tr>
-                  </thead>
-          
-                  <tbody>
-                    <tr>
-                      <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin.png">Bitcoin</td>
-                      <td>0.0200</td>
-                      <td>$4000</td>
-                      <td>$4,21,001.00</td>
-                      <td>9.74%</td>
-                      
-                    </tr>
-                    <tr>
-                        <td><img class="cryptoimg" src="assets/bitcoinimages/achain.png">Achain</td>
-                        <td>0.0200</td>
-                        <td>$4000</td>
-                        <td>$4,21,001.00</td>
-                        <td>9.74%</td>
-                        
-                      </tr>
-                      <tr>
-                          <td><img class="cryptoimg" src="assets/bitcoinimages/aeternity.png">Aternity</td>
-                          <td>0.0200</td>
-                          <td>$4000</td>
-                          <td>$4,21,001.00</td>
-                          <td>9.74%</td>
-                          
-                        </tr>
-                        <tr>
-                            <td><img class="cryptoimg" src="assets/bitcoinimages/aion.png">Aion</td>
-                            <td>0.0200</td>
-                            <td>$4000</td>
-                            <td>$4,21,001.00</td>
-                            <td>9.74%</td>
-                            
-                          </tr>
-                          <tr>
-                              <td><img class="cryptoimg" src="assets/bitcoinimages/augur.png">Augur</td>
-                              <td>0.0200</td>
-                              <td>$4000</td>
-                              <td>$4,21,001.00</td>
-                              <td>9.74%</td>
-                              
-                            </tr>
-                            <tr>
-                                <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin_cash.png">Bitcoin Cash</td>
-                                <td>0.0200</td>
-                                <td>$4000</td>
-                                <td>$4,21,001.00</td>
-                                <td>9.74%</td>
-                                
-                              </tr>
-                              <tr>
-                                  <td><img class="cryptoimg" src="assets/bitcoinimages/cyber_miles.png">Cyber Miles</td>
-                                  <td>0.0200</td>
-                                  <td>$4000</td>
-                                  <td>$4,21,001.00</td>
-                                  <td>9.74%</td>
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-lg-offset-2 portcontent">
+                  <!--top buttons-->  
+                  <div class="porttopbut">
+                    <div class="col-md-12">
+                    <div class="row">
+                      <div class="droplistmain">
+                        <div class="col-md-3">
+                      <div class="droplist">
+                          <label>
+                              <select>
+                                <option value="0">Show 0 balances</option>
+                                <option value="1">BTC</option>
+                                <option value="2">ETH</option>
+                                <option value="3">XRP</option>
+                                <option value="4">Cloak</option>
+                                <option value="5">Dent</option>
+                                <option value="6">KMD</option>
+                                <option value="7">ETC</option>
+                                <option value="8">NPXS</option>
+                                <option value="9">USDT</option>
+                                <option value="10">EOSD</option>
+                                <option value="11">QKC</option>
+                                <option value="12">XVG</option>
+                              </select>
+                          </label>
+                        </div>
+                        </div>
+                        <div class="col-md-3">
+                        <div class="secdrop">
+                            <label>
+                                <select>
+                                  <option value="0">Value</option>
+                                  <option value="1">1</option>
+                                  <option value="2">2</option>
+                                  <option value="3">3</option>
+                                  <option value="4">4</option>
+                                  <option value="5">5</option>
+                                  <option value="6">6</option>
+                                  <option value="7">7</option>
+                                  <option value="8">8</option>
+                                  <option value="9">9</option>
                                   
-                                </tr>
-                                <tr>
-                                    <td><img class="cryptoimg" src="assets/bitcoinimages/eos.png">Eos</td>
+                                </select>
+                            </label>
+                          </div>
+                          </div>
+                         
+                          <div class="col-md-3">
+                          <div class="thirddrop">
+                              <label>
+                                  <select>
+                                    <option value="0">Select Trend</option>
+                                    <option value="1">2.2%</option>
+                                    <option value="2">2.23%</option>
+                                    <option value="3">3.2%</option>
+                                    <option value="4">4.2%</option>
+                                    <option value="5">24.2%</option>
+                                    <option value="6">32.7%</option>
+                                    <option value="7">45.2%</option>
+                                    <option value="8">58.34%</option>
+                                    
+                                  </select>
+                              </label>
+                            </div>
+                            </div>
+                            <div class="col-md-3 search">
+                            <input type="text" placeholder="Search.." class="new">
+                            
+                              <i class="fa fa-search" style="cursor: auto;"></i>
+                           
+                            </div>
+                            </div>
+                            </div>
+                            </div>
+                            
+                    </div>
+                    <!--top button end-->
+                    <!--portfolio bottomcontent-->
+                    <div class="col-md-12 portbot">
+                      <div class="row">
+                        <div class="col-md-7 cryptocoins">
+                            <div class="cryptolist">
+                            <h3 class="coinlist">Coin List</h3>
+                            <table class="table striped">
+                                <thead>
+                                  <tr>
+                                      <th>Currency</th>
+                                      <th>Amount</th>
+                                      <th>Value</th>
+                                      <th>Price</th>
+                                      <th>Trend</th>
+                                  </tr>
+                                </thead>
+                        
+                                <tbody>
+                                  <tr>
+                                    <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin.png">Bitcoin</td>
                                     <td>0.0200</td>
                                     <td>$4000</td>
                                     <td>$4,21,001.00</td>
@@ -179,7 +109,7 @@
                                     
                                   </tr>
                                   <tr>
-                                      <td><img class="cryptoimg" src="assets/bitcoinimages/ether.png">Ether</td>
+                                      <td><img class="cryptoimg" src="assets/bitcoinimages/achain.png">Achain</td>
                                       <td>0.0200</td>
                                       <td>$4000</td>
                                       <td>$4,21,001.00</td>
@@ -187,7 +117,7 @@
                                       
                                     </tr>
                                     <tr>
-                                        <td><img class="cryptoimg" src="assets/bitcoinimages/litecoin.png">Litecoin</td>
+                                        <td><img class="cryptoimg" src="assets/bitcoinimages/aeternity.png">Aternity</td>
                                         <td>0.0200</td>
                                         <td>$4000</td>
                                         <td>$4,21,001.00</td>
@@ -195,31 +125,89 @@
                                         
                                       </tr>
                                       <tr>
-                                          <td><img class="cryptoimg" src="assets/bitcoinimages/nano.png">Nano</td>
+                                          <td><img class="cryptoimg" src="assets/bitcoinimages/aion.png">Aion</td>
                                           <td>0.0200</td>
                                           <td>$4000</td>
                                           <td>$4,21,001.00</td>
                                           <td>9.74%</td>
                                           
                                         </tr>
-                  </tbody>
-                </table>
-          </div>
-          <div class="col-md-5">
-              <div class='card'>
-                  <app-pie-chart [data]='data' [colours]='colours'></app-pie-chart>
+                                        <tr>
+                                            <td><img class="cryptoimg" src="assets/bitcoinimages/augur.png">Augur</td>
+                                            <td>0.0200</td>
+                                            <td>$4000</td>
+                                            <td>$4,21,001.00</td>
+                                            <td>9.74%</td>
+                                            
+                                          </tr>
+                                          <tr>
+                                              <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin_cash.png">Bitcoin Cash</td>
+                                              <td>0.0200</td>
+                                              <td>$4000</td>
+                                              <td>$4,21,001.00</td>
+                                              <td>9.74%</td>
+                                              
+                                            </tr>
+                                            <tr>
+                                                <td><img class="cryptoimg" src="assets/bitcoinimages/cyber_miles.png">Cyber Miles</td>
+                                                <td>0.0200</td>
+                                                <td>$4000</td>
+                                                <td>$4,21,001.00</td>
+                                                <td>9.74%</td>
+                                                
+                                              </tr>
+                                              <tr>
+                                                  <td><img class="cryptoimg" src="assets/bitcoinimages/eos.png">Eos</td>
+                                                  <td>0.0200</td>
+                                                  <td>$4000</td>
+                                                  <td>$4,21,001.00</td>
+                                                  <td>9.74%</td>
+                                                  
+                                                </tr>
+                                                <tr>
+                                                    <td><img class="cryptoimg" src="assets/bitcoinimages/ether.png">Ether</td>
+                                                    <td>0.0200</td>
+                                                    <td>$4000</td>
+                                                    <td>$4,21,001.00</td>
+                                                    <td>9.74%</td>
+                                                    
+                                                  </tr>
+                                                  <tr>
+                                                      <td><img class="cryptoimg" src="assets/bitcoinimages/litecoin.png">Litecoin</td>
+                                                      <td>0.0200</td>
+                                                      <td>$4000</td>
+                                                      <td>$4,21,001.00</td>
+                                                      <td>9.74%</td>
+                                                      
+                                                    </tr>
+                                                    <tr>
+                                                        <td><img class="cryptoimg" src="assets/bitcoinimages/nano.png">Nano</td>
+                                                        <td>0.0200</td>
+                                                        <td>$4000</td>
+                                                        <td>$4,21,001.00</td>
+                                                        <td>9.74%</td>
+                                                        
+                                                      </tr>
+                                </tbody>
+                              </table>
+                              </div>
+                          </div>
+                          <div class="col-md-5 cryptopie">
+                              <div class="cryptopiech">
+                              <h3 class="cryptpie">Coin Graph</h3>
+                              <div class='card'>
+                                  <app-pie-chart [data]='data' [colours]='colours'></app-pie-chart>
+                                </div>
+                                </div>
+                          </div>
+                      </div>
+                    </div>
+                    <!--portfolio bottomcontent end-->
                 </div>
-          </div>
-          </div>
-
-          
-        <!-- search end-->
-  </div>
-  </div>
+            </div>
+        </div>
+    </div>
+    <!-- /#page-content-wrapper -->
   
-
-      </div><!--/row-->
-
-</div>
-</div><!-- /.container -->
-</section>
+  </div>
+  </section>
