--- a/src/app/dashboard/home.component.html
+++ b/src/app/dashboard/home.component.html
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <!--right sidebar-->
-                <div class="col-md-8 col-sm-12">
+                <div class="col-md-8 col-sm-12 chart">
                     <!-- <h1>Hi {{currentUser.firstName}}!</h1>
           <p>You're logged in with Angular 6!!</p>
           <h3>All registered users:</h3>
@@ -474,7 +474,7 @@
                             </div>
 
                             <!--trades start-->
-                            <div class="col-md-5">
+                            <div class="col-md-5 sell">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
