--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -49,7 +49,7 @@
     <div class="copyright">
     <div class="container copyright">
       <p>
-        Website designed and developed by <a href="www.experdel.com" target="_blank">Experdel</a>
+        Website designed and developed by <a href="www.experdel.com" target="_blank">Experdel Software & Consulting Pvt Ltd</a>
       </p>
     </div>
     </div>
