--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,19 +15,31 @@
     </div>
 
 <header class="header">
-  <div class="container">
+  <div class="container" >
   <a href="" class="logo"><img src="/assets/logowhite.png"></a>
 
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
+   `<ul class="nav navbar-nav">
+      <li class="dropdown funds">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
+        <ul class="dropdown-menu funds" style="display: none;">
+          <li ><a href="#">Balances</a></li>
+          <li><a href="#">Deposits</a></li>
+          <li><a href="#">Withdrawals</a></li>
+          <li><a href="#">Transaction History</a></li>
+          
+        </ul>
+      </li>
+    </ul>
     <li><a href="#work">Features</a></li>
-    <li><a href="#about">About</a></li>
+    <li *ngIf="isLoggedIn"><a href="#about">About</a></li>
     <ul class="nav navbar-nav">
-        <li class="dropdown">
+        <li class="dropdown more">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
-          <ul class="dropdown-menu" style="display: none;">
-            <li><a href="#">HOW IT WORKS</a></li>
+          <ul class="dropdown-menu more" style="display: none;">
+            <li ><a href="#">HOW IT WORKS</a></li>
             <li><a href="#">MARKET STATISTICS</a></li>
             <li><a href="#">ANNOUNCEMENTS</a></li>
             <!-- <li class="divider"></li> -->
@@ -40,8 +52,8 @@
           </ul>
         </li>
       </ul>
-    <li><a href="#careers">EOS.IO</a></li>
-    <li><a href="#careers">Hackathon</a></li>
+    <!-- <li><a href="#careers">EOS.IO</a></li>
+    <li><a href="#careers">Hackathon</a></li> -->
     <li><a href="#contact">Contact</a></li>
     
   </ul>
