--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,156 +1,317 @@
-@media screen and (min-width: 768px) {
-    .row-offcanvas {
-      position: relative;
-      -webkit-transition: all .25s ease-out;
-         -moz-transition: all .25s ease-out;
-              transition: all .25s ease-out;
-    }
-  
-    .row-offcanvas-right {
-      right: 25%;
-    }
-  
-    .row-offcanvas-left {
-      left: 25%;
-    }
-  
-    .row-offcanvas-right .sidebar-offcanvas {
-      right: -25%; /* 3 columns */
-      /* background-color: #2e3b42; */
-    }
-  
-    .row-offcanvas-left .sidebar-offcanvas {
-      left: -25%; /* 3 columns */
-      /* background-color: #2e3b42; */
-    }
-  
-    .row-offcanvas-right.active {
-      right: 0; /* 3 columns */
-    }
-  
-    .row-offcanvas-left.active {
-      left: 0; /* 3 columns */
-      background-color: #1b262d;
-    }
-  
-    .row-offcanvas-right.active .sidebar-offcanvas {
-        background-color: rgb(254, 254, 254);
-    }
-    .row-offcanvas-left.active .sidebar-offcanvas {
-        background-color:     rgb(46, 59, 66);
-    }
-  
-  .row-offcanvas .content {
-      width: 75%; /* 9 columns */
-      -webkit-transition: all .25s ease-out;
-         -moz-transition: all .25s ease-out;
-              transition: all .25s ease-out;
-  
-    }
-  
-    .row-offcanvas.active .content {
-      width: 100%; /* 12 columns */
-    }
-         
-    .sidebar-offcanvas {
-      position: absolute;
-      top: 0;
-      width: 25%; /* 3 columns */
-    }
-  }
-  @media screen and (max-width: 767px) {
-    .row-offcanvas {
-      position: relative;
-      -webkit-transition: all .25s ease-out;
-         -moz-transition: all .25s ease-out;
-              transition: all .25s ease-out;
-    }
-  
-    .row-offcanvas-right {
-      right: 0;
-    }
-  
-    .row-offcanvas-left {
-      left: 0;
-    }
-  
-    .row-offcanvas-right
-    .sidebar-offcanvas {
-      right: -50%; /* 6 columns */
-    }
-  
-    .row-offcanvas-left
-    .sidebar-offcanvas {
-      left: -50%; /* 6 columns */
-    }
-  
-    .row-offcanvas-right.active {
-      right: 50%; /* 6 columns */
-    }
-  
-    .row-offcanvas-left.active {
-      left: 50%; /* 6 columns */
-    }
-  
-    .sidebar-offcanvas {
-      position: absolute;
-      top: 0;
-      width: 50%; /* 6 columns */
-    }
-  }
-  .portfolio {
-    padding: 100px 0 20px 0;
-    background-color: #2e3b42;
+#wrapper {
+  padding-left: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
-.hamburger{
-  background:none;
-  /* position:absolute; */
-  top:0;
-  right:0;
-  line-height:45px;
-  padding:5px 15px 0px 15px;
-  color:#fff;
-  border:0;
-  font-size:1.4em;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
+
+#wrapper.toggled {
+  padding-left: 220px;
 }
-.cross{
-  background:none;
-  /* position:absolute; */
-  top:0px;
-  right:0;
-  padding:7px 15px 0px 15px;
-  color:#fff;
-  border:0;
-  font-size:3em;
-  line-height:65px;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
+
+#sidebar-wrapper {
+  position: absolute;
+  z-index: 1000;
+  left: 220px;
+  width: 0;
+  height: 100%;
+  margin-left: -254px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  background: #1b262d;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  top:108px;
 }
+
+#sidebar-wrapper::-webkit-scrollbar {
+display: none;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  width: 220px;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  padding-top: 70px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+  position: absolute;
+  margin-right: -220px;
+}
+
+/*-------------------------------*/
+/*     Sidebar nav styles        */
+/*-------------------------------*/
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 220px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-nav li {
+  position: relative; 
+  line-height: 20px;
+  display: inline-block;
+  width: 100%;
+}
+
+.sidebar-nav li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 3px;
+  background-color: #1c1c1c;
+  -webkit-transition: width .2s ease-in;
+    -moz-transition:  width .2s ease-in;
+     -ms-transition:  width .2s ease-in;
+          transition: width .2s ease-in;
+
+}
+.sidebar-nav li:first-child a {
+  color: #fff;
+  background-color: #1a1a1a;
+}
+.sidebar-nav li:nth-child(2):before {
+  background-color: #ec1b5a;   
+}
+.sidebar-nav li:nth-child(3):before {
+  background-color: #79aefe;   
+}
+.sidebar-nav li:nth-child(4):before {
+  background-color: #314190;   
+}
+.sidebar-nav li:nth-child(5):before {
+  background-color: #279636;   
+}
+.sidebar-nav li:nth-child(6):before {
+  background-color: #7d5d81;   
+}
+.sidebar-nav li:nth-child(7):before {
+  background-color: #ead24c;   
+}
+.sidebar-nav li:nth-child(8):before {
+  background-color: #2d2366;   
+}
+.sidebar-nav li:nth-child(9):before {
+  background-color: #35acdf;   
+}
+.sidebar-nav li:hover:before,
+.sidebar-nav li.open:hover:before {
+  width: 100%;
+  -webkit-transition: width .2s ease-in;
+    -moz-transition:  width .2s ease-in;
+     -ms-transition:  width .2s ease-in;
+          transition: width .2s ease-in;
+
+}
+
+.sidebar-nav li a {
+  display: block;
+  color: #ddd;
+  text-decoration: none;
+  padding: 10px 15px 10px 30px;    
+}
+
+.sidebar-nav li a:hover,
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus,
+.sidebar-nav li.open a:hover,
+.sidebar-nav li.open a:active,
+.sidebar-nav li.open a:focus{
+  color: #fff;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  font-size: 20px;
+  line-height: 44px;
+}
+.sidebar-nav .dropdown-menu {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  border-radius: 0;
+  border: none;
+  background-color: #222;
+  box-shadow: none;
+}
+
+/*-------------------------------*/
+/*       Hamburger-Cross         */
+/*-------------------------------*/
+
+.hamburger {
+position: absolute;
+top: 130px;  
+z-index: 999;
+display: block;
+width: 32px;
+height: 32px;
+margin-left: 15px;
+background: transparent;
+border: none;
+}
+.hamburger:hover,
+.hamburger:focus,
+.hamburger:active {
+outline: none;
+}
+.hamburger.is-closed:before {
+content: '';
+display: block;
+width: 100px;
+font-size: 14px;
+color: #fff;
+line-height: 32px;
+text-align: center;
+opacity: 0;
+/* -webkit-transform: translate3d(0,0,0);
+-webkit-transition: all .35s ease-in-out; */
+}
+.hamburger.is-closed:hover:before {
+opacity: 1;
+display: block;
+/* -webkit-transform: translate3d(-100px,0,0);
+-webkit-transition: all .35s ease-in-out; */
+}
+
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom,
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+position: absolute;
+left: 0;
+height: 4px;
+width: 100%;
+}
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom {
+background-color: #1a1a1a;
+}
+.hamburger.is-closed .hamb-top { 
+top: 5px; 
+/* -webkit-transition: all .35s ease-in-out; */
+}
+.hamburger.is-closed .hamb-middle {
+top: 50%;
+margin-top: -2px;
+}
+.hamburger.is-closed .hamb-bottom {
+bottom: 5px;  
+/* -webkit-transition: all .35s ease-in-out; */
+}
+
+.hamburger.is-closed:hover .hamb-top {
+top: 0;
+/* -webkit-transition: all .35s ease-in-out; */
+}
+.hamburger.is-closed:hover .hamb-bottom {
+bottom: 0;
+/* -webkit-transition: all .35s ease-in-out; */
+}
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+background-color: #1a1a1a;
+}
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-bottom {
+top: 50%;
+margin-top: -2px;  
+}
+/* .hamburger.is-open .hamb-top { 
+-webkit-transform: rotate(45deg);
+-webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+} */
+.hamburger.is-open .hamb-middle { display: none; }
+/* .hamburger.is-open .hamb-bottom {
+-webkit-transform: rotate(-45deg);
+-webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+} */
+.hamburger.is-open:before {
+content: '';
+display: block;
+width: 100px;
+font-size: 14px;
+color: #fff;
+line-height: 32px;
+text-align: center;
+opacity: 0;
+/* -webkit-transform: translate3d(0,0,0);
+-webkit-transition: all .35s ease-in-out; */
+}
+.hamburger.is-open:hover:before {
+opacity: 1;
+display: block;
+/* -webkit-transform: translate3d(-100px,0,0);
+-webkit-transition: all .35s ease-in-out; */
+}
+
+/*-------------------------------*/
+/*            Overlay            */
+/*-------------------------------*/
+
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(250,250,250,.8);
+  z-index: 1;
+}
+.hamburger.is-open .hamb-top {
+  transform: rotate(45deg);
+  /* -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08); */
+}
+.hamburger.is-open .hamb-bottom {
+transform: rotate(-45deg);
+  /* -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08); */
+}
+
+
+/*css from 1st portfolio*/
 .droplist {
-    display: inline-flex;
+  display: inline-flex;
 }
 .list-group-item.active {
-    z-index: 2;
-    color: #fff;
-    background-color: #2e3b42;
-    border-color: #fff;
+  z-index: 2;
+  color: #fff;
+  background-color: #2e3b42;
+  border-color: #fff;
 }
 .list-group-item{
-    z-index: 2;
-    color: #fff;
-    background-color: #1b262d;
-    border-color: #fff;
+  z-index: 2;
+  color: #fff;
+  background-color: #1b262d;
+  border-color: #fff;
 }
 .col-xs-12.col-sm-9.content{
-    background-color: #1b262d;
-    margin-left: 10px;
-    color: white;
+  background-color: #1b262d;
+  margin-left: 10px;
+  color: white;
 }
 .sidebar-offcanvas{
 padding: 0 15px;
@@ -167,107 +328,114 @@ padding: 10px 0px;
 
 /* selectcss */
 select {
-    padding:3px 22px;
-    margin: 0;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
-    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    background: #f8f8f8;
-    color:#888;
-    border:none;
-    outline:none;
-    display: inline-block;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
-    cursor:pointer;
+  padding:3px 22px;
+  margin: 0;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+  -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+  -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+  box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+  background: #f8f8f8;
+  color:#888;
+  border:none;
+  outline:none;
+  display: inline-block;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
+  cursor:pointer;
 }
 
 /* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-    select {padding-right:18px}
+  select {padding-right:18px}
 }
 
 label {position:relative}
 label:after {
-    content:'<>';
-    font:11px "Consolas", monospace;
-    color:#aaa;
-    -webkit-transform:rotate(90deg);
-    -moz-transform:rotate(90deg);
-    -ms-transform:rotate(90deg);
-    transform:rotate(90deg);
-    right:8px; top:7px;
-    padding:0 0 2px;
-    border-bottom:1px solid #ddd;
-    position:absolute;
-    pointer-events:none;
+  content:'<>';
+  font:11px "Consolas", monospace;
+  color:#aaa;
+  -webkit-transform:rotate(90deg);
+  -moz-transform:rotate(90deg);
+  -ms-transform:rotate(90deg);
+  transform:rotate(90deg);
+  right:8px; top:7px;
+  padding:0 0 2px;
+  border-bottom:1px solid #ddd;
+  position:absolute;
+  pointer-events:none;
 }
 label:before {
-    content:'';
-    right:6px; top:0px;
-    width:20px; height:20px;
-    background:#f8f8f8;
-    position:absolute;
-    pointer-events:none;
-    display:block;
+  content:'';
+  right:6px; top:0px;
+  width:20px; height:20px;
+  background:#f8f8f8;
+  position:absolute;
+  pointer-events:none;
+  display:block;
 }
 .droplistmain {
-    display: flex;
-    margin-top: 30px;
+  /* display: flex; */
+  margin-top: 30px;
+  width:100%
 }
+.droplistmain .col-md-3{display:inline-block; text-align: center;}
 /* .droplistmain div {
-     margin: 0 10px; 
+   margin: 0 10px; 
 } */
 .baltxt {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 .buylist {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 .col-xs-12.col-sm-9.content {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 .card{
-  background-color: #1b262d !important;
-  border:0 !important
+background-color: #1b262d !important;
+border:0 !important
 }
 .cryptoimg{
-  width: 22px;
-  height: 22px;
-  margin-right: 10px;
-  vertical-align: middle;
+width: 22px;
+height: 22px;
+margin-right: 10px;
+vertical-align: middle;
 }
 .col-md-7.cryptotable {
-  text-align: initial;
+text-align: initial;
 }
 .new {
-  width: 100%;
-  border: 1px solid #384952;
-  background: #2c3940;
-  color: white;
+width: 100%;
+border: 1px solid #384952;
+background: #2c3940;
+color: white;
 }
 .fa.fa-search {
-  float: right;
-  margin-right: 6px;
-  margin-top: -23px;
-  position: relative;
-  z-index: 2;
-  color: #848484e6;
+float: right;
+margin-right: 6px;
+margin-top: -23px;
+position: relative;
+z-index: 2;
+color: #848484e6;
 }
-
-/* .legend{
-  display:inline-block !important;
-} */
-/* .item {
-  display: flex;
-  margin: 10px 0px;
+.portfolio {
+  padding: 100px 0 20px 0;
+  background-color: #2e3b42;
 }
-.legend .item{
-  display: flex !important;
-  margin: 10px 0 !important;
-
-} */
+.col-lg-12.col-lg-offset-2.portcontent {
+  color: white;
+}
+.col-md-12.portbot {
+  margin-top: 70px;
+}
+.cryptolist {
+  background-color: #1b262d;
+  padding: 20px;
+}
+.cryptopiech {
+  background-color: #1b262d;
+  padding: 20px;
+}
