--- a/src/app/balances/balances.component.css
+++ b/src/app/balances/balances.component.css
@@ -1,4 +1,29 @@
 table {
     width: 100%;
   }
-  
+  .balances {
+    padding: 200px 0px;
+}
+.dep {
+  display: inline-block;
+  min-width: 70px;
+  height: 23px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #666;
+  border: 1px solid #e5e7ea;
+  padding: 0 2px;
+  margin-left: 6px;
+  background: #fff;
+}
+.balimg img {
+  width: 25px;
+}
+.table.table-striped.balancetable {
+  text-align: center;
+}
+.dep:hover {
+  background-color: #293e4a;
+  color: white;
+}
