--- a/src/app/dashboard/home.component.html
+++ b/src/app/dashboard/home.component.html
@@ -573,6 +573,8 @@
             </div>
         </div>
     </div>
-
+   
+    <!-- <p><a (click)="Logout($event)">Logout</a></p> -->
+    
     <!-- <p><a [routerLink]="['/Home']">Logout</a></p> -->
 </section>
