--- a/src/app/balances/balances.component.html
+++ b/src/app/balances/balances.component.html
@@ -1,5 +1,13 @@
 <section class="balances">
 <div class="container">
+  <div class="col-md-4 bal">
+    Search:
+    <input type='text' [(ngModel)]= 'listFilter'>
+    <i class="fa fa-search"></i>
+</div>
+    <div class='col-md-6'>
+        <h3>Filter by:{{listFilter}}</h3>
+    </div>
                 <table class="table table-striped balancetable">
                   <thead>
                   <tr>
@@ -34,7 +42,7 @@
                   </tr>
                   </thead>
                   <tbody>
-                  <tr *ngFor="let row of collection | orderBy: order:reverse:'case-insensitive'">
+                  <tr *ngFor="let row of filteredProducts | orderBy: order:reverse:'case-insensitive'">
                     <td class="balimg"><img [src]='row.info.coin '></td>
                     <td class="mdl-data-table__cell--non-numeric">{{ row.info.name }}</td>
                     <td>{{ row.info.totalbalance }}</td>
